# pickplace-rl-mobile

./: README.md  readme.md
docs/: robot_architecture.md  system_architecture_and_improvements.md  vla_concepts.md
src/pickplace_rl_mobile/: CMakeLists.txt  setup.py
src/pickplace_rl_mobile/config/: nav2_params.yaml  robot_view.rviz
src/pickplace_rl_mobile/gazebo/model/cylinder/:  model.sdf  model.config
src/pickplace_rl_mobile/gazebo/world/:  pickplace_world.world
src/pickplace_rl_mobile/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pickplace_rl_mobile/install/pickplace_rl_mobile/local/lib/python3.10/dist-packages/pickplace_rl_mobile/rl/: agent.py
src/pickplace_rl_mobile/install/pickplace_rl_mobile/share/ament_index/resource_index/parent_prefix_path/: pickplace_rl_mobile
src/pickplace_rl_mobile/install/pickplace_rl_mobile/share/pickplace_rl_mobile/: local_setup.sh  package.bash  package.sh
src/pickplace_rl_mobile/install/pickplace_rl_mobile/share/pickplace_rl_mobile/launch/: display_launch.py  gazebo.launch.py  rl_train.launch.py  run_rl_training.sh
src/pickplace_rl_mobile/install/pickplace_rl_mobile/share/pickplace_rl_mobile/urdf/: pickplace_mobile_arm.urdf
src/pickplace_rl_mobile/launch/: display_launch.py  display_mobile_ur3.launch.py  full_system.launch.py  gazebo.launch.py  gazebo_launch.py  rl_train.launch.py  standalone_rl_training.launch.py  vla_full_pipeline.launch.py  vla_phase1.launch.py
src/pickplace_rl_mobile/pickplace_rl_mobile/: demo_pick_place.py  domain_randomizer.py  manip_rl_node.py  perception_node.py  pickplace_env.py  safety_guard.py  smart_pick_place.py  test_env_standalone.py  test_policy.py  train_rl.py  vla_action_node.py  vla_coordinator_node.py  vla_language_node.py  vla_vision_node.py
src/pickplace_rl_mobile/pickplace_rl_mobile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pickplace_rl_mobile/pickplace_rl_mobile/rl/: agent.py  train.py
src/pickplace_rl_mobile/rl/: env.py
src/pickplace_rl_mobile/urdf/: mobile_ur3.urdf  pickplace_mobile_arm.urdf
src/pickplace_rl_mobile/worlds/: pickplace_world.world
(+38 files in other folders)
